js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.7.kt
class MyClass {
    companion object {
        konst intProperty = 3
    }
}
